@@ -1,16 +1,26 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA256
+Hash: SHA512
 
 DIST i2c-tools-3.0.2.tar.bz2 62523 SHA256 0b4d6455a30a3264a60b4d3be55855d996d52ea4f162a2f04ffff378e24f98a2
 DIST i2c-tools-3.1.0.tar.bz2 66840 SHA256 960023f61de292c6dd757fcedec4bffa7dd036e8594e24b26a706094ca4c142a
-EBUILD i2c-tools-3.0.2.ebuild 1371 SHA256 18f9718e11065c0d91392ff392988a5ae8d5468db0acd631366bcf7902fcfb4c SHA512 b3d5eb9750e777994a084e3d15ec0b396229c537dcb44a7e561590d6a64c7151ccc1a169c8fe32a333b260566eab55cc1b9830407894c417fe80bad1a9a7d3b8 WHIRLPOOL b4626c0ff64e1f489a2289ea2bab75facee17f9be2e2cd6ecc7c65baf188e72bdb32b12f80ae8d38415da534b91ed5ffa868ad22b9626434fcc68012dab4a167
+EBUILD i2c-tools-3.0.2.ebuild 1366 SHA256 546f54dd146a46782c2f2d9c7700dae2df68b223bcba36340921e83fb74c3b8d SHA512 fc16e5a52303f108076d4d64d5427dfc267e9ce5974d6221e3c51e87225ea1302a5ca8d53bfd1e5f68156e081075761c5569c7e778592512edfd4e471a347758 WHIRLPOOL eb3b3dc3488fc15d03261b173cfced7fad50a0725837a3b16dc8476b66b13e3e892469822622af7197b094c8dd2f19804970efb9111aee1e6fec59a38f5c2486
 EBUILD i2c-tools-3.1.0.ebuild 1419 SHA256 2beb5c4e2abfeb3c2e6a7adc39b6ae992c9177fac6f5c74ede006677c58b79f8 SHA512 b59dc40de224ee56501cd8593c99f07b507d69ccaa92442187d039ce34bbe2acc1bec14c9a65d63cc3eca58fbd20930ce5baf04e25f96cc4beb23bff1c77e5f5 WHIRLPOOL 0e90ec9cc276346e56a2b1efbd37c304284b6ca19ed252cbbd2f1572a930cc8f6c5a4eeeb5cff4c67994d002fca6c431d252452fae62455f11666c65df54f413
-MISC ChangeLog 2141 SHA256 deb70235e2f93f20729e85431a179ed04eff428e16ff62dbbdb32b651f934ff8 SHA512 dbb411ab3bd5cd4254b6a8552056b81f499fc81f79e83509630c72f301713247f5556807cc16e9c6ed2d5202847d5f0b294696dfa9f5dc5a9d199df42910b49f WHIRLPOOL 3da8a0d31d95eeb0a5f65ca01edea7edeb7093b530a7399ceccbb06754d6a74edb5cf4cf72f7d8450bb55771efcce4d0be8f3daed97dda3a9076eb2db795db7a
+MISC ChangeLog 2247 SHA256 15a1b3ce3f4a6fa373e9f039877cf9570d6e8c52c43b6f49c5569d1568a70729 SHA512 9056c91f78bb8691dce6349dd8add85d674cc6ee26cba6636e66a93c50672b13e37bc53188f833921145c770d8d1fcfa5b9e4714e4d6f657e319f159952ead68 WHIRLPOOL dd8e20f74b228e1c5606a81341fff169cfa88d274bf5a6d156c02624c50e1dbe55d5f5ccd05eb71bdce5e39f58c77cd9b56f7710af36fb69c7c19e5f7719f02e
 MISC metadata.xml 208 SHA256 98f8aa3fb70533eeab6b09d5bc30bd8f649ec13d9b04363490082fb87bb6032e SHA512 d5a7f3cb2fe57f8d7783ba358068648b122d9f5de81a17bff61ce600e42b6487e6f7e2a62c8be95cc7021cb3ea88716824b1ad0565da922ea753bea2417b3d3d WHIRLPOOL e38a6cdef2acb3efdc182efde482593790f773ab3bb9b66cced3af47e4ab39368757e17c4352c6cacaefa338341db88c3bcc3ffcd32aabd7984c5b19051a7bb7
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEAREIAAYFAlCox4YACgkQCaWpQKGI+9TIDACfQU8Y+CMYbFTc7m3YeY8+0iPS
-Mh4An3ggKqxELhr9FCVgHKSyY5g+32zZ
-=Sfgj
+iQIcBAEBCgAGBQJRJ7tMAAoJELp701BxlEWfRmgQAKhpoo/Nm6GKHdcKaPoazDGR
+k5OyVJDtsYKj6OGG6MWSPiYY/nDdjbXnSNz6K4tho/lW8LpUdGDbMuhQ6aDPEB7n
+xH+lO5FQLNXa/jAJGOBGZa627zVhO3bBgU+7134/N/fkH0M7OO5zHh25aUtiHjqE
+fPViE6udwtjvAY4E8UrNBGRtKN9OoClBLHt0yZ+EaSYr2CyO+kKId91sfQveoUVM
+H7MStzvEH7xZSiXoTueb3CyZFiW9lgg0tqd3tJ4BhATsQ4DnbG/Msgb9Vht9c3yc
+hcUfQgQKgvQAOt2Z2kqY5DjaMA2emsiNkXnbS4ekqPCpcdXiZiL6fgK3JGBrFf3b
+6dqqI5GiTvSCTbtmBujMmujVDX1ncIkue04di+BMpwUdFuZ39sCfzrRX3KPFUWMS
+iYtMLlkR2xhFIdTVJ6yFgv1LDOhb8Bx0AOiBep4pHF772i42AeJTufBbybAMrM0X
+0sw5OYR3FO4WEcsMKDPN47tsc9aZVPzMxSeNAKg8APEF9j8y5l9sD1x2AO4clRBS
+KDKGnthzF2Qqgw3tGjfo03V/XHhbXlX5Q5XK8Mko0oNpTBFL2vA9RD81qZ1K7Nsf
+4PwY3fqNG1ZL5o/bhNewBcLNn5M427SFwgTn0qnOWIt5Wg3LjwLj8T79C4CQys+k
+djdmXPBIxcAbFdEnQJxz
+=mMkS
 -----END PGP SIGNATURE-----
