@@ -1,6 +1,9 @@
 # ChangeLog for sys-apps/i2c-tools
-# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/i2c-tools/ChangeLog,v 1.16 2012/11/18 11:33:25 pacho Exp $
+# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/i2c-tools/ChangeLog,v 1.17 2013/02/22 18:41:21 ago Exp $
+
+  22 Feb 2013; Agostino Sarubbo <ago@gentoo.org> i2c-tools-3.0.2.ebuild:
+  Stable for arm, wrt bug #458190
 
   18 Nov 2012; Pacho Ramos <pacho@gentoo.org> -i2c-tools-3.0.3.ebuild,
   metadata.xml:
